# Inscalia-SalesOps-Application

./: .env  .env.example  .gitignore  Makefile  README.md  SalesOps PRD v1.1.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  audit_log.py  celerybeat-schedule.db  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  schemas.py
backend/apps/api/routes/: intents.py
backend/apps/api/services/: audit_log.py  intent_validator.py  llm_intent_parser.py  orchestrator.py
backend/orchestrator/: __init__.py  deadletter_store.py  models.py  planner.py  state_machine.py
backend/tests/: conftest.py  test_audit_log.py  test_health_metrics.py  test_intent_validator.py  test_intents.py  test_models.py  test_orchestrator.py  test_orchestrator_service.py  test_workers.py
backend/workers/: celery_app.py  tasks.py
docs/: acceptance_checklist.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.flow.test.tsx  App.test.tsx  App.tsx
frontend/src/test/: setup.ts
